# risc0-dag

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/decoders/: base32.rs  base58.rs  base64.rs  cid.rs  mod.rs
lib/src/encoders/: mod.rs  protobuf.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
res/: dag.json
src/: main.rs  plan.rs  task.rs  worker.rs
