[package]
name = "ipfs-dag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
dag-core = { path = "core" }
dag-methods = { path = "methods" }
risc0-circuit-rv32im = "1"
risc0-zkvm = { version = "1.0.5", default-features = false, features = ["prove"] }
hex = "0.4"
workerpool = "1.2"

[dev-dependencies]



[features]
default = []
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
