[package]
name = "ipfs-dag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
dag-core = { path = "core" }
dag-methods = { path = "methods" }
risc0-circuit-rv32im = "2.0.2"
risc0-zkvm = { version = "2.0.1", default-features = false, features = ["prove"] }
hex = "0.4"
workerpool = "1.2"

[dev-dependencies]



[features]
default = []
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
