[package]
name = "ipfs_dag"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dag-core = { path = "../../core" }
dag-lib = { path = "../../lib", default-features = false }
risc0-zkvm = { version = "1.0.5", default-features = false, features = [
  "std",
] }
sha2 = "0.10.6"


[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }